	  place.
  bottombars()
	- Call blank_bottombars() instead of blank_bottomwin(). (David
	  Benbennick)
  check_statblank()
	- Overhaul for efficiency, (David Benbennick)  DLR: Add
	  reset_cursor() call to ensure that the cursor is always in the
	  right place.
  edit_refresh()
	- Remove apparently unneeded leaveok() calls. (David Benbennick)
  statusbar()
	- Call reset_cursor() just before refreshing the edit window, so
	  that slang and other non-ncurses versions of curses will
	  properly place the cursor back in the edit window instead of
	  leaving it at the end of the statusbar. (DLR)
  do_credits()
	- Use napms() instead of nanosleep(), as it does the same thing
	  (aside from taking an argument in milliseconds instead of
	  microseconds) and curses includes it. (DLR)
	- Overhaul for efficiency, and make sure the xlcredits
	  translations are done after initialization in order to avoid
	  an error when compiling with -pedantic. (David Benbennick)
- configure.ac:
	- Add tests for isblank(), strcasestr(), and strnlen(), and
	  define _GNU_SOURCE so that the tests work properly.  Increase
	  the minimum required autoconf version to 2.54. (DLR)
	- Reformat the test programs so that they aren't packed into
	  fewer lines than usual, so as to make them easier to read, and
	  remove unnecessary inclusion of stdio.h in the slang test
	  programs. (DLR)
	- Remove the checks for resizeterm() and wresize(), as they're
	  no longer needed. (DLR)
- faq.html:
	- Removed question about the NumLock glitch, as it's no longer
	  needed. (DLR)
- nano.1:
	- Document restricted mode. (IO ERROR)  DLR: Add minor
	  modifications to account for the above changes.
	- Document the smart home key option. (DLR)
- nano.texi:
	- Fix toggle inaccuracies: Meta-L now toggles line wrapping, and
	  Meta-< and Meta-> aren't toggles. (DLR)
	- Document restricted mode. (IO ERROR)  DLR: Add minor
	  modifications to account for the above changes.